@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - fix optional tests of interaction with [ModuleBuildTiny::Fallback]
+            that broke with its newest release
 
 0.004     2014-10-18 04:41:46Z
           - bump optional dependency on [MakeMaker::Awesome] to avoid old bug
